<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        xmlns:android="http://schemas.android.com/apk/res/android">
<android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <TextView
        android:text="@string/lbl_member"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_member"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>
    <RadioGroup
            android:id="@+id/rg_member_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_member"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            android:orientation="vertical"/>
    <TextView
            android:text="@string/lbl_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_service"
            app:layout_constraintTop_toBottomOf="@+id/rg_member_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.0"/>

    <TextView
            android:text="@string/lbl_dental"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/tv_dental"
            app:layout_constraintTop_toBottomOf="@+id/tv_service"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
    android:visibility="gone"/>
    <TextView
            android:text="@string/lbl_paramedical"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/tv_paramedical"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_dental"
            android:layout_marginTop="8dp"
            android:textStyle="normal"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:fontFamily="sans-serif"
            android:visibility="gone"
    />
    <TextView
            android:text="@string/lbl_vision"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/tv_vision"
            android:fontFamily="sans-serif"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/tv_paramedical"
            android:visibility="gone"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_service"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:id="@+id/rg_service"
    >
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/lbl_dental"
                android:id="@+id/rb_dental"
        android:enabled="false"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/lbl_paramedical"
                android:id="@+id/rb_paramedical"
        android:enabled="false"/>
        <RadioButton
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/lbl_vision"
                android:id="@+id/rb_vision"
        android:enabled="false"/>

    </RadioGroup>
</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>